# fuel-mirror

./: AUTHORS  ChangeLog  README.md  requirements.txt  setup.cfg
docs/packetary/: centos.yaml  centos_mirrors.yaml  centos_packages.yaml  ubuntu.yaml  ubuntu_mirror.yaml  ubuntu_packages.yml
etc/: centos.yaml  config.yaml  ubuntu.yaml
fuel_mirror/commands/: create.py
fuel_mirror/common/: accessors.py  url_builder.py
fuel_mirror/patch/packetary/: packages_forest.py
fuel_mirror/schemas/: input_data_schema.py
