[metadata]
name = fuel-mirror
version = 9.0.0
author = Mirantis
author-email = fuel-dev@lists.launchpad.net
summary = Fuel agent
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python

[files]
packages =
    fuel_mirror

[entry_points]
    console_scripts =
        fuel-mirror = fuel_mirror.app:main

    fuel_mirror =
        apply = fuel_mirror.commands.apply:ApplyCommand
        create = fuel_mirror.commands.create:CreateCommand

[pbr]
autodoc_index_modules = True

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
